<resources>
    <string name="app_name">Make_A_Thon</string>
    <string name="lock_title_text">조회하기</string>
    <string name="warning_title_text">신고하기</string>
    <string name="pw_text">비밀번호</string>
    <string name="email_text">이메일</string>
    <string name="signup_text">회원가입</string>
    <string name="login_text">로그인</string>
    <string name="pw_check_text">비밀번호 확인</string>
    <string name="name_text">이름</string>
    <string name="phone_number_text">전화번호</string>
    <string name="sign_up_text">회원가입</string>
    <string name="sos_title_text">구조대 현황 확인</string>
    <string name="my_place_set_title_text">내 위치 확인</string>
    <string name="back_text">돌아가기</string>
</resources>
